# fedscrape-docker

./: .env.example  .gitattributes  .gitignore  CLAUDE_CODE_CLEANUP_PROMPT.md  CLAUDE_CODE_INFRA_PROMPT.md  DEPLOYMENT.md  Dockerfile  ReadMe.md  app.py  data.csv  data2.csv  db_build.py  db_insert.py  dbcon.py  docker-compose.yml  dockerfile  download.py  frontend_prompt.md  index.sql  pipe.sql  pyproject.toml  railway.toml  request_data.py  requirements.txt  scrape.py  table_build.py  tempCodeRunnerFile.py  upload.py
.claude/: SESSION_NOTES.md  architecture.md  claude.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
api/: cache.py  config.py  limiter.py  main.py
api/models/: rate.py
api/routes/: chat.py  health.py  rates.py
api/services/: chat.py  downloader.py  scraper.py  upload.py
data/: ffer.csv
db/: crud.py  models.py  session.py
fedscrape/: cli.py  mcp_server.py
fedscrape-ui/: .env.example  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
fedscrape-ui/scripts/: generate-api.js
fedscrape-ui/src/: App.tsx  index.css  main.tsx
fedscrape-ui/src/api/: config.ts
fedscrape-ui/src/components/: RateCard.tsx
fedscrape-ui/src/components/charts/: RateSeriesChart.tsx  SpreadChart.tsx
fedscrape-ui/src/hooks/: useRates.ts
fedscrape-ui/src/pages/: Chat.tsx  Dashboard.tsx  Explorer.tsx  YieldCurve.tsx
fedscrape-ui/src/types/: rates.ts
railway/: api.json  mcp.json  scraper.json
tests/: conftest.py  test_core.py
(+5 files in other folders)
