[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedscrape"
version = "1.0.0"
description = "Federal Reserve H.15 interest rate data API and MCP server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "httpx>=0.27.2",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
    "mcp>=1.1.2",
    "boto3>=1.35.36",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.5.2",
    "typer>=0.12.5",
    "rich>=13.9.2",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]

[project.scripts]
fedscrape = "fedscrape.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["fedscrape", "api", "db"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
